--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
       <ul class="nav navbar-nav">
-        <li><img src="/static/images/logo.png" style="height: 50px;"></img></li>
+        <li><img src="/static/images/logo.png" style="margin-left: 10px; height: 50px;"></img></li>
         <li><a href="/map">Mon Parc</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Configuration
