--- a/templates/home.html
+++ b/templates/home.html
@@ -44,6 +44,7 @@
         </ul>
       </li>
       <li><a href="/getEvents">Données</a></li>
+      <li><a href="/signIn" style="position:fixed; right: 2%;"><i style="font-size: 16px;" class="fas fa-sign-out-alt"></i></a></li>
     </ul>
   </nav>
 
