--- a/templates/allEvents.html
+++ b/templates/allEvents.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     <script src='static/Chart.min.js'></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <!-- Hightchart (Zoomable Timeseries) -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -40,6 +41,7 @@
           </ul>
         </li>
         <li><a href="/getEvents">Données</a></li>
+        <li><a href="/signIn" style="position:fixed; right: 2%;"><i style="font-size: 16px;" class="fas fa-sign-out-alt"></i></a></li>
       </ul>
 		</nav>
 
