--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-6 block-style">
                     <h3 class="text-center h3-style padding_top_bot10">Bienvenue</h3>
-                    <form action="{{ url_for('map') }}" method="post" class="form" role="form">
+                    <form action="{{ url_for('signIn') }}" method="post" class="form" role="form">
                       <div class="form-group" style="text-align: center; margin-top: 30px;">
                         <d1>
                           <input required class="form-control" placeholder="Identifiant" id="login" name="login" style="width: 400px; margin: auto;"/>
