--- a/templates/admin.html
+++ b/templates/admin.html
@@ -27,8 +27,8 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Configuration
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a class="navbar-brand" href="/newDevice">Gérer mes équipements</a></li>
-            <li><a class="navbar-brand" href="/admin">Gérer mes alertes</a></li>
+            <li><a class="navbar-brand" href="/newDevice">Enregistrer mes capteurs</a></li>
+            <li><a class="navbar-brand" href="/admin">Configurer mes alertes</a></li>
           </ul>
         </li>
         <li><a href="/getEvents">Données</a></li>
@@ -38,7 +38,7 @@
 
     <div style="width: 65%; margin: auto; margin-top: 50px;">
       <div style="margin-top: 150px;">
-        <h1>Configurer mes alertes</h1>
+        <h1>Configurer mes Alertes</h1>
       </div>
       <br>
       <div style= "background-color: white; padding: 2px; border-radius: 10px; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
