--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
     <script src="../static/js/toggle.js"></script>
     <link rel="stylesheet" href="../static/style/bootstrap.min.css">
     <link rel="stylesheet" href="../static/style/styles.css">
+    <link rel="stylesheet" href="../static/style/rings.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
