--- a/static/style/style.css
+++ b/static/style/style.css
@@ -104,6 +104,12 @@ hr {
 	background-color: rgba(255,255,255,1);
 }
 
+.ellf_logo {
+	margin-left: 15px;
+	height: 50px;
+	margin-right:10px;
+}
+
 .btn-info {
 	background-color: #2AB4DC;
 }
