--- a/templates/admin.html
+++ b/templates/admin.html
@@ -11,7 +11,7 @@
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   	<!-- Title -->
-  	<title>Admin</title>
+  	<title>Configurer Mes Alertes - Et La Lumière Fût</title>
   	<!-- Custom styles -->
   	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/style.css') }}">
 
@@ -21,24 +21,24 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
       <ul class="nav navbar-nav">
-        <li><img src="/static/images/logo.png" style="margin-left: 10px; height: 50px;"></img></li>
-        <li><a href="/map">Mon Parc</a></li>
+        <li><img class="ellf_logo" src="/static/images/logo.png"></img></li>
+        <li><a href="/map"><i class="fas fa-map-marked-alt" style="margin-right: 10px;"></i>Mon Parc</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Configuration
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-cog" style="margin-right: 10px;"></i>Configuration
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a class="navbar-brand" href="/newDevice">Enregistrer mes capteurs</a></li>
+            <li><a class="navbar-brand" href="/newDevice">Gérer mes capteurs</a></li>
             <li><a class="navbar-brand" href="/admin">Configurer mes alertes</a></li>
           </ul>
         </li>
-        <li><a href="/getEvents">Données</a></li>
-        <li><a href="/signIn" style="position:fixed; right: 1%;"><i style="font-size: 16px;" class="fas fa-sign-out-alt"></i></a></li>
+        <li><a href="/getEvents"><i class="fas fa-chart-pie" style="margin-right: 10px;"></i>Données</a></li>
+        <li><a href="/signIn" style="position:fixed; right: 2%;"><i style="font-size: 16px;" class="fas fa-sign-out-alt"></i></a></li>
       </ul>
     </nav>
 
     <div style="width: 65%; margin: auto; margin-top: 50px;">
       <div style="margin-top: 150px;">
-        <h1>Configurer mes Alertes</h1>
+        <h1><i class="fas fa-cogs" style="font-size: 30px; color: #25a743; margin-right: 15px;"></i>Configurer mes Alertes</h1>
       </div>
       <br>
       <div style= "background-color: white; padding: 2px; border-radius: 10px; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
