--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Title -->
-  <title>Mon Parc d'Eclairage</title>
+  <title>Mon Parc - Et La Lumière Fût</title>
   <!-- Custom styles -->
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/style.css') }}">
   <!-- Leaflet -->
@@ -33,18 +33,18 @@
 
   <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
     <ul class="nav navbar-nav">
-      <li><img src="/static/images/logo.png" style="margin-left: 10px; height: 50px;"></img></li>
-      <li><a href="/map">Mon Parc</a></li>
+      <li><img class="ellf_logo" src="/static/images/logo.png"></img></li>
+      <li><a href="/map"><i class="fas fa-map-marked-alt" style="margin-right: 10px;"></i>Mon Parc</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Configuration
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-cog" style="margin-right: 10px;"></i>Configuration
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a class="navbar-brand" href="/newDevice">Enregistrer mes capteurs</a></li>
+          <li><a class="navbar-brand" href="/newDevice">Gérer mes capteurs</a></li>
           <li><a class="navbar-brand" href="/admin">Configurer mes alertes</a></li>
         </ul>
       </li>
-      <li><a href="/getEvents">Données</a></li>
-      <li><a href="/signIn" style="position:fixed; right: 1%;"><i style="font-size: 16px;" class="fas fa-sign-out-alt"></i></a></li>
+      <li><a href="/getEvents"><i class="fas fa-chart-pie" style="margin-right: 10px;"></i>Données</a></li>
+      <li><a href="/signIn" style="position:fixed; right: 2%;"><i style="font-size: 16px;" class="fas fa-sign-out-alt"></i></a></li>
     </ul>
   </nav>
 
