--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Et la lumière fût</title>
+    <title>Bienvenue - Et la lumière fût</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../static/js/toggle.js"></script>
     <link rel="stylesheet" href="../static/style/bootstrap.min.css">
     <link rel="stylesheet" href="../static/style/styles.css">
-    <link rel="stylesheet" href="../static/style/rings.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
