--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -28,10 +28,6 @@ body {
     margin-bottom: 200px;
 }
 
-.form-control:valid {
-  background-color:  white!important;
-}
-
 .logo-width {
     width: 25%;
 }
@@ -60,6 +56,11 @@ body {
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.4), 0 8px 20px 0 rgba(0, 0, 0, 0.25);
 }
 
+.form-control {
+  background-color: rgba(255,255,255,0.4)!important;
+  border: 0px solid #ced4da
+}
+
 .submit {
   color: #fff;
   padding-right: 15px;
@@ -74,11 +75,13 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  border: 1px solid grey;
+  border: 0px solid grey;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  border-radius: 0.25rem;
+  border-radius: 60px;
+  height:60px;
+  width:60px;
   margin-right: 0;
   -webkit-animation-name: whitePulse;
   -webkit-animation-duration: 3s;
@@ -87,9 +90,9 @@ body {
 }
 
 @-webkit-keyframes whitePulse {
-  from { background-color: #25AA44; -webkit-box-shadow: 0 0 12px #ccc; }
+  from { background-color: rgba(37, 170, 68, 0.8); -webkit-box-shadow: 0 0 12px #ccc; }
   50% { background-color: #25AA44; -webkit-box-shadow: 0 0 12px rgb(42, 63, 84); }
-  to { background-color: #25AA44; -webkit-box-shadow: 0 0 12px #ccc; }
+  to { background-color: rgba(37, 170, 68, 0.8); -webkit-box-shadow: 0 0 12px #ccc; }
 }
 
 
