--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../static/js/toggle.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style/bootstrap.min.css">
     <link rel="stylesheet" href="../static/style/styles.css">
+    <link rel="stylesheet" href="../static/style/rings.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -14,33 +16,29 @@
     <section class="header text-center">
         <img class="logo-width" src="static/images/logo.png" alt="logo et la lumière fut">
     </section>
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-6 block-style">
-                    <h3 class="text-center h3-style padding_top_bot10">Bienvenue</h3>
-                    <form action="{{ url_for('signIn') }}" method="post" class="form" role="form">
-                      <div class="form-group" style="text-align: center; margin-top: 30px;">
-                        <d1>
-                          <input required class="form-control" placeholder="Identifiant" id="login" name="login" style="width: 400px; margin: auto;"/>
-                        </d1>
-                      </div>
-                      <div class="form-group">
-                        <d1>
-                          <input required class="form-control" type="password" placeholder="Mot de passe" id="password" name="password" style="width: 400px; margin: auto;"/>
-                        </d1>
-                    </div>
-                    <div class="text-center">
-                      <p><input id="save" type=submit value="Connexion" class="submit" style="margin-bottom: 10px; margin-top: 20px;"></p>
-                      {% if error %}
-                        <p style="color: red;">{{error}}</p>
-                      {% endif %}
-                    </div>
-                    </form>
-                </div>
-            </div>
+    <div class="hoja">
+    <section class="login">
+      <h3 class="text-center h3-style padding_top_bot10">Bienvenue</h3>
+      <form action="{{ url_for('signIn') }}" method="post" class="form" role="form">
+        <div class="form-group" style="text-align: center; margin-top: 30px;">
+          <d1>
+            <input required class="form-control" placeholder="Identifiant" id="login" name="login" style="width: 300px; margin: auto;"/>
+          </d1>
         </div>
+        <div class="form-group">
+          <d1>
+            <input required class="form-control" type="password" placeholder="Mot de passe" id="password" name="password" style="width: 300px; margin: auto;"/>
+          </d1>
+      </div>
+      <div class="text-center">
+        <p><button id="save" type="submit" class="submit" style="margin-bottom: 10px; margin-top: 20px;"><i style="font-size: 25px;" class="fas fa-sign-in-alt"></i></button></p>
+        {% if error %}
+          <p style="color: red;">{{error}}</p>
+        {% endif %}
+      </div>
+      </form>
     </section>
+  </div>
 </body>
 
 </html>
