--- a/templates/newDevice.html
+++ b/templates/newDevice.html
@@ -48,7 +48,7 @@
         <h1><i class="fas fa-map-marked-alt" style="font-size: 30px; color: #25a743; margin-right: 15px;"></i>Ajouter un Capteur</h1>
       </div>
       <br>
-      <div style= "background-color: white; padding: 2px; border-radius: 10px; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+      <div style= "background-color: rgba(255,255,255,0.3); padding: 2px; border-radius: 10px; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
             <br>
               OFF
