--- a/static/style/rings.css
+++ b/static/style/rings.css
@@ -6,6 +6,15 @@
   z-index: 1;
 }
 
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0; }
+  20% { opacity: 0.3; }
+  40% { opacity: 0.5; }
+  60% { opacity: 0.7; }
+  80% { opacity: 0.8; }
+  100% { opacity: 1; }
+}
+
 .hoja{
   color: rgb(220,220,226);
   position:absolute;
@@ -17,6 +26,9 @@
   text-align:center;
   z-index:0;
   -webkit-font-smoothing: antialiased;
+  -webkit-animation-name: fadeIn;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: 1;
 }
 
 .hoja:after,
