--- a/static/style/style.css
+++ b/static/style/style.css
@@ -104,6 +104,10 @@ hr {
 	background-color: rgba(255,255,255,1);
 }
 
+.dropdown-menu {
+	padding-top: 10px;
+}
+
 .ellf_logo {
 	margin-left: 15px;
 	height: 50px;
@@ -203,6 +207,11 @@ hr {
 	box-shadow: 0 1px 5px rgba(0,0,0,0.0) !important;
 	margin-top: 30px !important;
 }
+
+.awesome-marker i {
+        font-size: 15px !important;
+        margin-top: 11px !important;
+    }
 
 /* switch */
 
