--- a/templates/admin.html
+++ b/templates/admin.html
@@ -19,22 +19,22 @@
 
 <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
-      <ul class="nav navbar-nav">
-        <li><img class="ellf_logo" src="/static/images/logo.png"></img></li>
-        <li><a href="/map"><i class="fas fa-map-marked-alt" style="margin-right: 10px;"></i>Mon Parc</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-cog" style="margin-right: 10px;"></i>Configuration
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a class="navbar-brand" href="/newDevice">Gérer mes capteurs</a></li>
-            <li><a class="navbar-brand" href="/admin">Configurer mes alertes</a></li>
-          </ul>
-        </li>
-        <li><a href="/getEvents"><i class="fas fa-chart-pie" style="margin-right: 10px;"></i>Données</a></li>
-        <li><a href="/signIn" style="position:fixed; right: 2%;"><i style="font-size: 16px;" class="fas fa-sign-out-alt"></i></a></li>
-      </ul>
-    </nav>
+  <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
+    <ul class="nav navbar-nav">
+      <li><img class="ellf_logo" src="/static/images/logo.png"></img></li>
+      <li><a href="/map"><i class="fas fa-map-marked-alt" style="margin-right: 10px;"></i>Mon Parc</a></li>
+      <li><a href="/getEvents"><i class="fas fa-chart-pie" style="margin-right: 10px;"></i>Données</a></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-cog" style="margin-right: 10px;"></i>Configuration
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a class="navbar-brand" href="/newDevice">Gérer mes capteurs</a></li>
+          <li><a class="navbar-brand" href="/admin">Configurer mes alertes</a></li>
+        </ul>
+      </li>
+      <li><a href="/signIn" style="position:fixed; right: 2%;"><i style="font-size: 16px;" class="fas fa-sign-out-alt"></i></a></li>
+    </ul>
+  </nav>
 
     <div style="width: 65%; margin: auto; margin-top: 50px;">
       <div style="margin-top: 150px;">
@@ -43,11 +43,11 @@
       <br>
       <div style= "background-color: rgba(255,255,255,0.3); padding: 2px; border-radius: 10px; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
-            <div class="form-group" style="width: 50%; float: left;">
+            <div class="form-group">
               <label>Délai avant déclenchement du mode monitoring</label>
               <br>
       				<d1>
-                <select class="form-control" id="warning" required name="warning" style="width: 95%;">
+                <select class="form-control" id="warning" required name="warning" style="width: 500px;">
                   <option {% if warning == 12 %} selected {% endif %} value="12">12 Heures</option>
                   <option {% if warning == 24 %} selected {% endif %} value="24">24 Heures</option>
                   <option {% if warning == 36 %} selected {% endif %} value="36">36 Heures</option>
@@ -57,11 +57,11 @@
                 <small style="font-size: 11px;">Par défaut, 48 heures</small>
       				</d1>
       			</div>
-            <div class="form-group" style="width: 50%; float: left;">
+            <div class="form-group">
               <label>Délai avant le déclenchement du mode alerte</label>
               <br>
       				<d1>
-                <select class="form-control" id="alert" required name="alert" style="width: 100%;">
+                <select class="form-control" id="alert" required name="alert" style="width: 500px;">
                   <option {% if alert == 24 %} selected {% endif %} value="24">24 Heures</option>
                   <option {% if alert == 36 %} selected {% endif %} value="36">36 Heures</option>
                   <option {% if alert == 48 %} selected {% endif %} value="48">48 Heures</option>
