--- a/templates/home.html
+++ b/templates/home.html
@@ -99,11 +99,17 @@ var greenMarker = L.AwesomeMarkers.icon({
 
 {% for device in devices %}
 
-  {% if device.status == 0 %}
+  {% if device.status == 0 and lastData[device.device][0] != 0 %}
     L.marker([{{device.latitude}},{{device.longitude}}], {icon: redMarker}).on('click', function() {
       centerLeafletMapOnMarker(map, this);
     }).addTo(map)
     .bindPopup("<b> Capteur {{device.device}} </b>  </br> <em class='em_red'> Lampadaire défectueux </em> </br> Dernier allumage le {{ lastData[device.device][0] }} à {{ lastData[device.device][1] }} </br> <hr> </br> Rue {{device.street}} </br> {{device.latitude}}, {{device.longitude}}");
+
+  {% elif device.status == 0 and lastData[device.device][0] == 0 %}
+    L.marker([{{device.latitude}},{{device.longitude}}], {icon: redMarker}).on('click', function() {
+      centerLeafletMapOnMarker(map, this);
+    }).addTo(map)
+    .bindPopup("<b> Capteur {{device.device}} </b>  </br> <em class='em_red'> Statut inconnu </em> </br> Pas de données pour ce capteur </br> <hr> </br> Rue {{device.street}} </br> {{device.latitude}}, {{device.longitude}}");
 
   {% elif device.status == 0.5 %}
     L.marker([{{device.latitude}},{{device.longitude}}], {icon: orangeMarker}).on('click', function() {
