--- a/static/style/style.css
+++ b/static/style/style.css
@@ -54,13 +54,13 @@ hr {
 
 .nav-tabs>li>a {
 	color: black !important;
-	background-color: rgba(255,255,255,0.5);
+	background-color: rgba(255,255,255,0.3);
 }
 
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
 	border-width: 1px 1px 0 1px;
-	border-color: grey;
-	background-color: white !important;
+	border-color: transparent;
+	background-color: rgba(255, 255, 255, 0.75) !important;
 }
 
 .forms {
