--- a/templates/login.html
+++ b/templates/login.html
@@ -31,10 +31,10 @@
           </d1>
       </div>
       <div class="text-center">
-        <p><button id="save" type="submit" class="submit" style="margin-bottom: 10px; margin-top: 20px;"><i style="font-size: 25px;" class="fas fa-sign-in-alt"></i></button></p>
         {% if error %}
-          <p style="color: red;">{{error}}</p>
+          <p style="color: red; border-radius: 3px; padding: 5px; width: 300px; margin:auto; background-color: rgba(255, 255, 255, 0.7);">{{error}}</p>
         {% endif %}
+        <p><button id="save" type="submit" class="submit" style="margin-bottom: 10px; margin-top: 20px;"><i style="font-size: 25px;" class="fas fa-sign-in-alt"></i></button></p>
       </div>
       </form>
     </section>
