--- a/static/style/style.css
+++ b/static/style/style.css
@@ -147,6 +147,10 @@ hr {
   background-color:  white!important;
 }
 
+.form-control:focus {
+	border-color: #5cb85c !important;
+}
+
 .modal-header {
     padding: 15px;
     border-bottom: 0px solid #e5e5e5;
